--- a/01-html-css-structure/index.html
+++ b/01-html-css-structure/index.html
@@ -1,2 +1,43 @@
-Hello World!
-Matt is <b>kind of cool</b>, I guess.
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- This is where the head is! -->
+        <link href="./base.css" type="text/css" rel="stylesheet" />
+    </head>
+    <body>
+        <div>
+            <h1 class='reallybig' id='page-title'>This is h1</h1>
+            <h2>This is h2</h2>
+            <h3>This is h3</h3>
+            <h4>This is h4</h4>
+            <h5>This is h5</h5>
+            <h6>This is h6</h6>
+
+            <p>And here's our paragraph with lots of <span>text</span> in it.</p>
+
+            <span>This is a span</span>
+        </div>
+
+        <div>
+            <ol>
+                <li>This</li>
+                <li>is</li>
+                <li>an</li>
+                <li>ordered</li>
+                <li>list!</li>
+            </ol>
+
+            <ul>
+                <li>This</li>
+                <li>is</li>
+                <li>an</li>
+                <li>unordered</li>
+                <li>list!</li>
+            </ul>
+        </div>
+
+        <a href="http://www.uclaacm.com/">Visit ACM at UCLA!</a>
+
+        <img src="https://www.uclaacm.com/images/acm_wordmark&logo.svg" alt="ACM at UCLA logo" />
+    </body>
+</html>
