'almost' wrapping up TODOs for 01

--- a/01-html-css-structure-style/index.html
+++ b/01-html-css-structure-style/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <!-- This is where the head is! -->
+        <title>matt is occasionally fun</title>
         <link href="./base.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
